--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 
+<title>yatfungloo</title>
+
+<head>
+    <link rel="stylesheet" href="neutronStyle.css">
+</head>
+
 <body>
     <!-- scrupt src added inside head or body -->
     <script src="externScript.js"></script>
@@ -38,9 +44,9 @@
     <button type="button" onclick="document.getElementById('output').innerHTML = 32">
         button. </button>
 
-    <script>
+    <!-- <script>
         window.alert('alert');
-    </script>
+    </script> -->
 
     <P>Print button.</P>
 
