resolve css file path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>yatfungloo</title>
 
 <head>
-    <link rel="stylesheet" href="neutronStyle.css">
+    <link rel="stylesheet" href="/neutronStyle.css">
 </head>
 
 <body>
