--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <!-- scrupt src added inside head or body -->
     <script src="externScript.js"></script>
 
-    <h2>Yat Fung Loo Web 2.0 Page</h2>
+    <h1>Yat Fung Loo's Website</h1>
     <h3>Just a web page to learn Javascript because I ran out of money reading computer arch books.</h3>
 
     <p id="demo">clock</p>
 
-    <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
-        Click me to display Date and Time.</button>
+    <button type="button" onmousemove="document.getElementById('demo').innerHTML = Date()">
+        Hover over me to display Date and Time.</button>
 
     <p id="demo1">A Paragraph.</p>
 
@@ -51,6 +51,11 @@
     <P>Print button.</P>
 
     <button onclick="window.print()">This is windw.print.</button>
+
+    <script>
+        let text = "HELLO WORLD";
+        let char = text.charCodeAt(0);
+    </script>
 
 </body>
 
